<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipesRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/row_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/recipe_ImageView"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/courgette"
                android:maxLines="2"
                android:text="@string/text_view"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/recipe_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/description_text_view"
                android:textColor="@color/darkGray"
                app:layout_constraintEnd_toEndOf="@id/title_textView"
                app:layout_constraintStart_toStartOf="@id/title_textView"
                app:layout_constraintTop_toBottomOf="@id/title_textView" />

            <ImageView
                android:id="@+id/heart_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/heart_textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/heart_textView"
                app:layout_constraintTop_toBottomOf="@id/description_TextView"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_heart"
                app:tint="@color/red"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/heart_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="@id/description_TextView"
                app:layout_constraintTop_toBottomOf="@id/heart_imageView"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/clock_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/clock_textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/clock_textView"
                app:layout_constraintTop_toTopOf="@+id/heart_imageView"
                app:srcCompat="@drawable/ic_clock"
                app:tint="@color/yellow"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/clock_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                app:layout_constraintStart_toEndOf="@id/heart_textView"
                app:layout_constraintTop_toBottomOf="@id/clock_imageView"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/leaf_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/leaf_textView"
                app:layout_constraintStart_toStartOf="@id/leaf_textView"
                app:layout_constraintTop_toTopOf="@+id/clock_imageView"
                app:srcCompat="@drawable/ic_leaf"
                tools:layout_editor_absoluteX="257dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/leaf_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/vegan"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@id/clock_textView"
                app:layout_constraintTop_toBottomOf="@id/leaf_imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>