<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorite_recipesRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favorite_row_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/favorite_recipe_ImageView"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/favorite_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/courgette"
                android:maxLines="2"
                android:text="@string/text_view"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/favorite_recipe_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favorite_description_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/description_text_view"
                android:textColor="@color/darkGray"
                app:layout_constraintEnd_toEndOf="@id/favorite_title_textView"
                app:layout_constraintStart_toStartOf="@id/favorite_title_textView"
                app:layout_constraintTop_toBottomOf="@id/favorite_title_textView" />

            <ImageView
                android:id="@+id/favorite_heart_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/favorite_heart_textView"
                app:layout_constraintStart_toStartOf="@id/favorite_heart_textView"
                app:layout_constraintTop_toBottomOf="@id/favorite_description_TextView"
                app:srcCompat="@drawable/ic_heart"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/favorite_heart_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="@id/favorite_description_TextView"
                app:layout_constraintTop_toBottomOf="@id/favorite_heart_imageView"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/favorite_clock_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="@id/favorite_clock_textView"
                app:layout_constraintStart_toStartOf="@id/favorite_clock_textView"
                app:layout_constraintTop_toTopOf="@+id/favorite_heart_imageView"
                app:srcCompat="@drawable/ic_clock"
                app:tint="@color/yellow"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/favorite_clock_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                app:layout_constraintStart_toEndOf="@id/favorite_heart_textView"
                app:layout_constraintTop_toBottomOf="@id/favorite_clock_imageView"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/favorite_leaf_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="@id/favorite_leaf_textView"
                app:layout_constraintStart_toStartOf="@id/favorite_leaf_textView"
                app:layout_constraintTop_toTopOf="@+id/favorite_clock_imageView"
                app:srcCompat="@drawable/ic_leaf"
                tools:layout_editor_absoluteX="257dp" />

            <TextView
                android:id="@+id/favorite_leaf_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/vegan"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@id/favorite_clock_textView"
                app:layout_constraintTop_toBottomOf="@id/favorite_leaf_imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>